--- a/Components/index.html
+++ b/Components/index.html
@@ -29,7 +29,7 @@
                 </div>
 
                 <div class="input">
-                    <img src="/Assets/images/icon-dollar.svg" alt="icon-dollar" class="dollor" />
+                    <img src="./Assets/images/icon-dollar.svg" alt="icon-dollar" class="dollor" />
                     <label for="bill"></label>
                     <input type="text" class="bill" id="bill" placeholder="0" />
                 </div>
@@ -55,7 +55,7 @@
                     <div class="person-error small "></div>
                 </div>
                 <div class="input ">
-                    <img src="/Assets/images/icon-person.svg " alt="icon-person " class="user " />
+                    <img src="./Assets/images/icon-person.svg " alt="icon-person " class="user " />
                     <label for="persons "></label>
                     <input type="text " class="select-persons " id="persons " placeholder="0 " />
                 </div>
